Add hw week12 partial

--- a/hw/hw.tex
+++ b/hw/hw.tex
@@ -239,6 +239,7 @@
 \DeclareMathOperator{\Jac}{Jac}
 \DeclareMathOperator{\Spec}{Spec}
 \DeclareMathOperator{\LT}{LT}
+\DeclareMathOperator{\Max}{Max}
 
 \newcommand{\ob}{\overline}
 \DeclareMathOperator{\ord}{ord}
@@ -348,6 +349,7 @@
 \include{week9}
 \include{week10}
 \include{week11}
+\include{week12}
 
 %\printindex
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
