--- a/hw/week11.tex
+++ b/hw/week11.tex
@@ -5,7 +5,7 @@
 \begin{exercise} \mbox{}
   \begin{enumerate}[(a)]
     \item Show that $\Set{ y-x^2, z-x^3 }$ is not a Gr\"obner basis for $x>y>z$.
-    \item Find a Gr\"ober basis for $\Gen{ y-x^2, z-x^3 }$.
+    \item Find a Gr\"obner basis for $\Gen{ y-x^2, z-x^3 }$.
   \end{enumerate}
 \end{exercise}
 
