Fix a bug in hw week11

--- a/hw/week11.tex
+++ b/hw/week11.tex
@@ -46,7 +46,7 @@
     \item $\left( I : \big( \sum\limits_{i=1}^r J_i \big) \right)
       = \bigcap\limits_{i=1}^r (I: J_i)$.
       Here, $(I:J) \triangleq \Set{ x\in R \given xJ \subseteq I }$.
-    \item $\left( \bigcap\limits_{i=1}^r I_i : J_i \right) =
+    \item $\left( \bigcap\limits_{i=1}^r I_i : J \right) =
       \bigcap\limits_{i=1}^r \left( I_i : J \right)$.
     \item $\big((I_1 : I_2) : I_3 \big) = (I_1 : I_2 I_3)$.
   \end{enumerate}
