Scaffold week12 day 1

--- a/main.tex
+++ b/main.tex
@@ -245,6 +245,7 @@
 % commutative
 \DeclareMathOperator{\Spec}{Spec}
 \DeclareMathOperator{\LT}{LT}
+\DeclareMathOperator{\Max}{Max}
 %
 \newcommand{\Resf}[1]{\big|_{#1}}
 
@@ -370,6 +371,7 @@
 \include{commutative/week1}
 \include{commutative/week2}
 \include{commutative/week3}
+\include{commutative/week4}
 
 \printindex
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
