--- a/hw/week12.tex
+++ b/hw/week12.tex
@@ -33,3 +33,15 @@
   where $\bar{R}$ is the integral closure of $R$ in $S$.
 \end{exercise}
 
+\begin{exercise}
+  If $\phi: R_1 \to R_2$ is a ring homomorphism and $p \in \Spec R_1$, then
+  \[
+    p = \phi^{-1}(q) \text{ for some } q \in \Spec R_2
+    \iff p = \phi^{-1}(R_2 \phi(p))
+  \]
+\end{exercise}
+
+\begin{exercise}
+  In a UFD $R$, $\forall p \in \Sepc R$ with $h(p) = 1$, $p = \gen{\alpha}$ for
+  some prime element $\alpha \in R$.
+\end{exercise}
