fix typo & add hw week13-1 & add Hao123 download link

--- a/hw/hw.tex
+++ b/hw/hw.tex
@@ -200,6 +200,7 @@
 \newcommand{\sI}{{\sf I}}
 
 \newcommand{\Mf}{\mathfrak{M}}
+\newcommand{\mf}{\mathfrak{m}}
 \newcommand{\Grf}{\mathfrak{Gr}}
 
 \newcommand{\bigOp}{\raisebox{0.3ex}{$\bigoplus$}}
@@ -350,6 +351,7 @@
 \include{week10}
 \include{week11}
 \include{week12}
+\include{week13}
 
 %\printindex
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
