--- a/hw/week12.tex
+++ b/hw/week12.tex
@@ -42,6 +42,6 @@
 \end{exercise}
 
 \begin{exercise}
-  In a UFD $R$, $\forall p \in \Sepc R$ with $h(p) = 1$, $p = \gen{\alpha}$ for
+  In a UFD $R$, $\forall p \in \Spec R$ with $h(p) = 1$, $p = \gen{\alpha}$ for
   some prime element $\alpha \in R$.
 \end{exercise}
