Minor fix in localization

--- a/commutative/localization/localization.tex
+++ b/commutative/localization/localization.tex
@@ -446,8 +446,7 @@ between ideals in $R$ and ideals in $R_S$.
   \end{enumerate}
 \end{definition}
 
-\begin{prop}
-  $\ $
+\begin{prop} \mbox{}
   \begin{enumerate}
     \item For any ideal $J$ of $R_S$, $(J^c)^e = J$.
     \item For any ideal $I$ of $R$, $(I^e)^c = \{r \in R \mid sr \in I \textrm{ for some } s \in S\}$. \\
@@ -488,7 +487,7 @@ between ideals in $R$ and ideals in $R_S$.
         But $\sum_{i=1}^n \frac{a_i}{s_i}r_i = 
         \frac{\sum\limits_{i=1}^n \left(\prod_{j\neq i} s_j \right) a_ir_i}{\prod_{i=1}^n s_i}
         = \frac{a}{s}$ with $a \in I, s \in S$.
-        So $\frac{r}{1} = frac{a}{s}$, that means there exists $x \in S$ that $x(sr-a) = 0$, 
+        So $\frac{r}{1} = \frac{a}{s}$, that means there exists $x \in S$ that $x(sr-a) = 0$, 
         then $xsr = xa \in I$. But $xs \in S$, so $r \in \textrm{RHS}$.
 
         Also, $I^e = R_S \iff \frac{1}{1} \in I^e \iff 1 \in (I^e)^c \iff s \cdot 1 = s \in I \textrm{ for some } s \in S
