Add week5 partial

--- a/commutative/week4.tex
+++ b/commutative/week4.tex
@@ -359,5 +359,6 @@ From now on, $R$ is a commutative ring with $1$.
 \end{theorem}
 
 \begin{theorem}
-  All maximal chain in $\Spec K[x_1, \dots, x_n]$ have the same length $n$, and thus $\dim k[x_1, \dots, x_n] = n$.
+  All maximal chain in $\Spec K[x_1, \dots, x_n]$ have the same length $n$, and thus
+  \[ \dim k[x_1, \dots, x_n] = n. \]
 \end{theorem}
