--- a/hw/week13.tex
+++ b/hw/week13.tex
@@ -19,6 +19,6 @@
 
 \begin{exercise}{(Krull's Intersection Theorem)}
 
-  Let $R$ be a Noetherian local ring with maximal ideal $\mathbb{\mf}$, 
-  show that $$\bigcap\limits_{n=0}^{\infty} \mf^n = \langle 0 \rangle$$.
+  Let $R$ be a Noetherian local ring with maximal ideal $\mf$, 
+  show that $$\bigcap\limits_{n=0}^{\infty} \mf^n = \gen{0}$$.
 \end{exercise}
