Add hw2 in the memory (not sure)

--- a/hw/week2.tex
+++ b/hw/week2.tex
@@ -2,3 +2,22 @@
 
 \section{Week 2}
 
+\begin{exercise}
+  Show that
+  \[ \Fb_q \subseteq \Fb_r \iff r = q^n \text{ for some } n \in \Nb. \]
+\end{exercise}
+
+\begin{exercise}
+  Let $K = \Fb_q$ be a finite field.
+  \begin{enumerate}
+    \item Show that there exists an irreducible polynomial of degree $n$
+      in $K[x]$ for all $n \in \Nb$.
+    \item Let $L$ be a splitting field of $x^n - 1$ over $K$. Show that
+      $[L : K] = k$ is the least positive integer s.t. $n \mid q^k - 1$.
+  \end{enumerate}
+\end{exercise}
+
+\begin{exercise}
+  Let $K$ be a finite field. Show that any element in $K$ can be written
+  as the sum of two squares.
+\end{exercise}
