--- a/main.tex
+++ b/main.tex
@@ -250,6 +250,7 @@
 \DeclareMathOperator{\LT}{LT}
 \DeclareMathOperator{\Max}{Max}
 \DeclareMathOperator{\Jac}{Jac}
+\DeclareMathOperator{\Frac}{Frac}
 %
 \newcommand{\Resf}[1]{\big|_{#1}}
 
