--- a/hw/hw.tex
+++ b/hw/hw.tex
@@ -245,6 +245,7 @@
 \newcommand{\ob}{\overline}
 \DeclareMathOperator{\ord}{ord}
 \DeclarePairedDelimiter{\gen}{\langle}{\rangle} % generator
+\DeclarePairedDelimiter{\set}{\lbrace}{\rbrace} % set
 %\newcommand*\quot[2]{{^{\textstyle #1}\Big/_{\textstyle #2}}}
 \newcommand*\quot[2]{{#1}/{#2}}
 \newcommand\bij{\lhook\joinrel\twoheadrightarrow}
