Update hw week14

--- a/hw/week13.tex
+++ b/hw/week13.tex
@@ -3,7 +3,7 @@
 \section{Week 13}
 
 \begin{exercise}
-  Let $0 \to N \to M \to L \to 0$ be exact in $\mathbf{Mod}_R$.
+  Let $0 \to N \to M \to L \to 0$ be exact in $\Mod_R$.
   Show that $N, L$ are Artinian (Noetherian) $\iff$ $M$ is Artinian (Noetherian).
 \end{exercise}
 
