--- a/hw/hw.tex
+++ b/hw/hw.tex
@@ -202,6 +202,7 @@
 \newcommand{\Mf}{\mathfrak{M}}
 \newcommand{\mf}{\mathfrak{m}}
 \newcommand{\Grf}{\mathfrak{Gr}}
+\newcommand{\Mod}{\mathbf{Mod}}
 
 \newcommand{\bigOp}{\raisebox{0.3ex}{$\bigoplus$}}
 \newcommand{\bigOt}{\raisebox{0.3ex}{$\bigotimes$}}
@@ -353,6 +354,7 @@
 \include{week11}
 \include{week12}
 \include{week13}
+\include{week14}
 
 %\printindex
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
