Add homology week1 (14) draft

--- a/commutative/week5.tex
+++ b/commutative/week5.tex
@@ -31,7 +31,7 @@
     \item $\Spec R = \Max R$. ($\implies \dim R = 0$)
       \begin{proof}
         $\forall p \in \Spec R, \quot{R}{p}$ is an integral domain
-        $\leasdto \quot{R}{p}$ is a field $\leadsto p \in \Max R$.
+        $\leadsto \quot{R}{p}$ is a field $\leadsto p \in \Max R$.
       \end{proof}
     \item $\abs{\Max R} < \infty$.
       \begin{proof}
@@ -141,7 +141,7 @@ $\mf_1\mf_2 \dotsm \mf_n = 0$. Then $R$ is Artinian $\iff$ $R$ is Noetherian.
   space. Hence,
   \[ \text{ $M_i$ is Artinian $\iff$ $M_i$ is Noetherian. } \]
   By definition, $0 \to \mf_1\mf_2\dotsm\mf_i \to \mf_1\mf_2\dotsm\mf_{i-1}
-  \to M_i \to 0$ is exact in $\mathbf{Mod}_R$.
+  \to M_i \to 0$ is exact in $\Mod_R$.
   By Ex1,
   %TODO
 \end{proof}
