--- a/hw/week14.tex
+++ b/hw/week14.tex
@@ -19,3 +19,7 @@
   Give examples to explain why $\Hom_R(M, \cdot), \Hom_R(\cdot, N), M\otimes_R \cdot$
   are not exact functors.
 \end{exercise}
+
+\begin{exercise}
+  Show that $h(y) \in \Hom_\Zb(R, N_0), h \in \Hom_R(M_2, N)$ and $h \circ \alpha = f$.
+\end{exercise}
