--- a/main.tex
+++ b/main.tex
@@ -207,6 +207,7 @@
 \newcommand{\mf}{\mathfrak{m}}
 \newcommand{\nf}{\mathfrak{n}}
 \newcommand{\Grf}{\mathfrak{Gr}}
+\newcommand{\Mod}{\mathbf{Mod}}
 
 \newcommand{\bigOp}{\raisebox{0.3ex}{$\bigoplus$}}
 \newcommand{\bigOt}{\raisebox{0.3ex}{$\bigotimes$}}
@@ -379,6 +380,7 @@
 \include{commutative/week3}
 \include{commutative/week4}
 \include{commutative/week5}
+\include{homology/week14}
 
 \printindex
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
